# epiphany

./: .gitignore  CONFORMANCE.md  Cargo.toml
.github/workflows/: ci.yml
crates/epiphany-bundle/: Cargo.toml  DECISIONS.md  README.md
crates/epiphany-bundle/examples/: fuzz_crash.rs
crates/epiphany-bundle/src/: block.rs  bundle.rs  chunk.rs  codec.rs  crc.rs  error.rs  fuzz.rs  header.rs  ids.rs  lib.rs  manifest.rs  opindex.rs  store.rs  superblock.rs  vectors.rs
crates/epiphany-bundle/tests/: crash_recovery.rs  manifest_selection.rs
crates/epiphany-core/: Cargo.toml  DECISIONS.md  README.md
crates/epiphany-core/src/: accidental.rs  codec.rs  event.rs  fuzz.rs  generators.rs  graph.rs  ids.rs  indexes.rs  invariants.rs  lib.rs  pitch.rs  pitch_space.rs  prepass.rs  tempo.rs  textvalue.rs  textvalue_event.rs  textvalue_graph.rs  textvalue_impls.rs  textvalue_pitch.rs  textvalue_time.rs  time.rs  tuning.rs
crates/epiphany-core/src/prepass/: tests.rs
crates/epiphany-core/tests/: score_graph.rs  textvalue_names.rs  textvalue_roundtrip.rs
crates/epiphany-determinism/: Cargo.toml  README.md
crates/epiphany-determinism/examples/: fuzz_roundtrip.rs
crates/epiphany-determinism/src/: coord.rs  domain.rs  float.rs  fuzz.rs  hash.rs  lib.rs  order.rs  serialize.rs  tolerance.rs
crates/epiphany-determinism/tests/: determinism_contract.rs
crates/epiphany-editor-core/: Cargo.toml  DECISIONS.md
crates/epiphany-editor-core/src/: barriers.rs  lib.rs
crates/epiphany-editor-gui/: Cargo.toml  DECISIONS.md
crates/epiphany-editor-gui/src/: goldens.rs  main.rs
crates/epiphany-engrave/: Cargo.toml  DECISIONS.md  README.md
crates/epiphany-engrave/src/: casting.rs  lib.rs  quality.rs  spacing.rs
crates/epiphany-layout-ir/: Cargo.toml  DECISIONS.md  README.md
crates/epiphany-layout-ir/src/: barrier.rs  cache.rs  constrained.rs  engrave_theory.rs  engraving.rs  glyph.rs  hittest.rs  lib.rs  logical.rs  provenance.rs  quality.rs  render.rs  resolved.rs  roundtrip.rs  solver.rs  spatial.rs  time_axis.rs  vertical_band.rs
crates/epiphany-ops/: Cargo.toml  DECISIONS.md  README.md
crates/epiphany-ops/examples/: fuzz_reduction.rs
crates/epiphany-ops/src/: anomaly.rs  causal.rs  conflict.rs  decode.rs  effect.rs  encode.rs  envdecode.rs  envelope.rs  fuzz.rs  lib.rs  migrate.rs  opset.rs  payload.rs  reduce.rs  slot.rs  stamp.rs  support.rs  textproj_conformance.rs  textproj_envelope.rs  textproj_kind.rs  textproj_leaf.rs  undo.rs  v0.rs  validate.rs  valuegen.rs  vectors.rs
crates/epiphany-ops/tests/: concurrent_reduction.rs  graph_reduction.rs
crates/epiphany-render-svg/: Cargo.toml  DECISIONS.md  README.md
crates/epiphany-render-svg/examples/: render_fixture.rs
crates/epiphany-render-svg/src/: font_subset_generated.rs  lib.rs  outline.rs  outlines_generated.rs  svg.rs  xml.rs
crates/epiphany-render-svg/tests/: acceptance.rs
crates/epiphany-render-svg/tests/golden/: ten_measure_single_staff.engrave.snapshot.txt  ten_measure_single_staff.stub.snapshot.txt  ten_measure_with_repeats.engrave.snapshot.txt  ten_measure_with_repeats.stub.snapshot.txt  ten_measure_with_slurs.engrave.snapshot.txt  ten_measure_with_slurs.stub.snapshot.txt  three_staff_close_content.engrave.snapshot.txt  three_staff_close_content.stub.snapshot.txt  two_staff_close_content.engrave.snapshot.txt  two_staff_close_content.stub.snapshot.txt  valid_score_rich.engrave.snapshot.txt  valid_score_rich.stub.snapshot.txt
crates/epiphany-render-svg/tools/: extract_bravura_outlines.py
crates/epiphany-testkit/: Cargo.toml  DECISIONS.md  README.md
crates/epiphany-testkit/benches/: bundle.rs  reduction.rs
crates/epiphany-testkit/examples/: conformance_suite.rs  generate_vectors.rs
crates/epiphany-testkit/src/: budget.rs  bundle_harness.rs  convergence.rs  corpus.rs  editloop.rs  equivocation.rs  fixtures.rs  generators.rs  layout_stub.rs  lib.rs  migration.rs  negative.rs  prepass_harness.rs  reference_suite.rs  rng.rs  roundtrip.rs  textproj.rs  vectors.rs
crates/epiphany-testkit/tests/: acceptance.rs  bundle_reopen.rs  multisystem_click.rs  prepass.rs  reference_suite.rs  requirement_labels.rs  text_projection_grammar.rs
crates/epiphany-textproj/: Cargo.toml
crates/epiphany-textproj/src/: lib.rs  parse.rs  project.rs  serialize.rs  vectors.rs
crates/epiphany-textproj/tests/: companion_version.rs
spec/: CONTRACT_EDITOR_T1A_GOLDENS.md  CONTRACT_EDITOR_T2_SELECTION.md  CONTRACT_P13S1_LABELS.md  CONTRACT_P13S6_PROMOTION.md  CONTRACT_P13S6_TEMPERAMENTS.md  CONTRACT_PUSH4B_3BII_IDENTITY.md  CONTRACT_PUSH4B_3BI_WIRE.md  CONTRACT_PUSH4B_ACCIDENTALS.md  CONTRACT_PUSH4B_PITCHSPACES.md  CONTRACT_PUSH4B_RESOLVER.md  CONTRACT_PUSH4B_SPEC1.md  CONTRACT_PUSH4B_TEMPERAMENTS.md  CONTRACT_TEXTPROJ_DOCUMENT.md  CONTRACT_TEXTPROJ_OPS.md  DRAFT_P13S6_TEMPERAMENTS.md  PASS11_RATIFICATION_LOG.md  PASS11_WORKLIST.md  PASS12_BATCH.md  PASS12_RATIFICATION_LOG.md  PASS12_WORKLIST.md  PASS13_CANDIDATES.md  PHASE2_F_WEEK0_WORKLIST.md  PHASE2_QUICKSTART.md  PLAN_EDITOR_APP.md  PLAN_P13S1_LABELS.md  PLAN_P13S2_CMN24.md  PLAN_PUSH4B_TUNING.md  PLAN_TEXTPROJ_DOCUMENT.md  PLAN_TEXTPROJ_OPS.md  QUICKSTART.md  binary_format.tex  core_spec.tex  operation_catalog.tex  quality_metric_catalog.tex  reference_suite.tex  text_projection.tex
spec/vectors/: decode_vectors.txt  textproj_document_vectors.txt
