[package]
name = "epiphany-bundle"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "The Epiphany .musc bundle file format (spec Chapter 8): fixed header, dual superblock atomic commit, content-addressed chunks, the manifest, retention policy, and the crash-recovery contract."

[dependencies]
epiphany-determinism.workspace = true
# Decode-only in production code: the read path MUST support zstd-compressed
# chunks (spec Chapter 8 §"Compression"); the writer still emits every chunk
# uncompressed (the documented Phase-3 deferral). See DECISIONS.md for why the
# libzstd binding was chosen over a pure-Rust decoder.
zstd.workspace = true

[[example]]
name = "fuzz_crash"
