[package]
name = "epiphany-determinism"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Determinism-contract primitives for Epiphany (spec Appendix D): tolerance classes, QuantizedCoord, content hashing, canonical float hygiene, and canonical iteration order."

[dependencies]
blake3.workspace = true

[[example]]
name = "fuzz_roundtrip"
